<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@drawable/background"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/register_icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="64dp"
                android:text="@string/loginInstructions"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/email"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                app:layout_constraintBottom_toTopOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_edittext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password">

                <CheckBox
                    android:id="@+id/chip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:buttonTint="@color/white"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/forgotPassword"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/forgot_password"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/chip2"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="@drawable/background_btn"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/createNewAccount"
            android:layout_marginTop="36dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:textSize="14sp"
            android:text="@string/newAccount"
            />

    </LinearLayout>
</LinearLayout>