<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.fragments.Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/got_hungry"
            android:textColor="@color/background"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/let_s_get_you_something"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textview"
            app:layout_constraintTop_toBottomOf="@+id/textview" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_margin="25dp"
            app:cardCornerRadius="20dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:strokeWidth="0dp">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:iss_auto_cycle="true"
                android:background="@color/white"
                app:iss_delay="2000"
                app:iss_period="2000"
                app:iss_text_align="CENTER" />


        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/subhajit_what_s_on_your_mind"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textview"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <HorizontalScrollView
            android:id="@+id/food_lists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/pizza"
                        android:src="@drawable/pizzas" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/pizza"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/noodles"
                        android:src="@drawable/noodles" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/noodles"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/dosa"
                        android:src="@drawable/dosa" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/dosa"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/momos"
                        android:src="@drawable/momos" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/momos"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/ice_cream"
                        android:src="@drawable/ice_cream" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/ice_cream"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/shakes"
                        android:src="@drawable/shakes" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/shakes"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/paratha"
                        android:src="@drawable/paratha" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/paratha"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/sweets"
                        android:src="@drawable/gulab_jamun" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/sweets"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/idli"
                        android:src="@drawable/idli" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/idli"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/cakes"
                        android:src="@drawable/cakes" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/cakes"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/biriyani"
                        android:src="@drawable/biriyani" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/biriyani"
                        android:textSize="14sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/burger"
                        android:src="@drawable/burgers" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/burger"
                        android:textSize="14sp" />


                </LinearLayout>


            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_lists" />

        <TextView
            android:id="@+id/textView123"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter_black"
            android:text="@string/all_restaurants_near_you"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textview"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RestaurantRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView123"
            tools:listitem="@layout/item_restaurant" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

